# deepof

./: .codeclimate.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AutoEncoder_HyperModels.py  CONTRIBUTING.md  DLC_analysis_additional_functions.py  DLC_analysis_class.py  Dockerfile  LICENSE  LSTM_AutoEncoders.py  MANIFEST.in  Pipfile  README.md  Seq2Seq_AE_hyperparameter_tuning.py  __init__.py  acrona.py  classes.py  cluster.json  codeql-analysis.yml  deepof_experiments.smk  encoding_visualization.py  hyperparameter_tuning.py  main.ipynb  main.py  model_training.py  predict_video.py  pyproject.toml  requirements.txt  run_deepof_experiments.sbatch  run_deepof_experiments.sh  setup.py  utils.py
.ipynb_checkpoints/: main-checkpoint.ipynb
Logos/: deepOF_logo_wo_text.afdesign
checkpoints/: .index  cp-0000.ckpt.data-00000-of-00002  cp-0000.ckpt.index
checkpoints/AE_20200617-003932/: checkpoint  cp-0001.ckpt.index  cp-0002.ckpt.index  cp-0003.ckpt.index  cp-0004.ckpt.index  cp-0005.ckpt.index  cp-0006.ckpt.index  cp-0007.ckpt.index  cp-0008.ckpt.index  cp-0009.ckpt.index  cp-0010.ckpt.index  cp-0011.ckpt.data-00000-of-00002  cp-0011.ckpt.index  cp-0012.ckpt.index  cp-0013.ckpt.index  cp-0014.ckpt.index  cp-0015.ckpt.index  cp-0016.ckpt.index  cp-0017.ckpt.index  cp-0018.ckpt.index  cp-0019.ckpt.index  cp-0020.ckpt.index  cp-0021.ckpt.index  cp-0022.ckpt.index  cp-0023.ckpt.index  cp-0024.ckpt.index  cp-0025.ckpt.index
checkpoints/GMVAE_components=5_loss=ELBO+MMD_kl_warmup=10_mmd_warmup=10_20200617-013659/: checkpoint  cp-0001.ckpt.index  cp-0002.ckpt.index  cp-0003.ckpt.index  cp-0004.ckpt.index  cp-0005.ckpt.index  cp-0006.ckpt.index  cp-0007.ckpt.index  cp-0008.ckpt.index  cp-0009.ckpt.index  cp-0010.ckpt.index  cp-0011.ckpt.index  cp-0012.ckpt.index  cp-0013.ckpt.index  cp-0014.ckpt.index  cp-0015.ckpt.index  cp-0016.ckpt.index  cp-0017.ckpt.index  cp-0018.ckpt.index  cp-0019.ckpt.index  cp-0020.ckpt.index  cp-0021.ckpt.index  cp-0022.ckpt.index  cp-0023.ckpt.index  cp-0024.ckpt.index  cp-0025.ckpt.index  cp-0026.ckpt.index  cp-0027.ckpt.index  cp-0028.ckpt.data-00000-of-00002  cp-0028.ckpt.index  cp-0029.ckpt.index  cp-0030.ckpt.index  cp-0031.ckpt.index  cp-0032.ckpt.index  cp-0033.ckpt.index  cp-0034.ckpt.index  cp-0035.ckpt.index  cp-0036.ckpt.index  cp-0037.ckpt.index  cp-0038.ckpt.index
checkpoints/GMVAE_components=5_loss=ELBO+MMD_kl_warmup=10_mmd_warmup=10_20200617-115543/: checkpoint  cp-0001.ckpt.index  cp-0002.ckpt.index  cp-0003.ckpt.index  cp-0004.ckpt.index  cp-0005.ckpt.index  cp-0006.ckpt.index  cp-0007.ckpt.index  cp-0008.ckpt.index  cp-0009.ckpt.index  cp-0010.ckpt.index  cp-0011.ckpt.index  cp-0012.ckpt.index  cp-0013.ckpt.index  cp-0014.ckpt.index  cp-0015.ckpt.index  cp-0016.ckpt.index  cp-0017.ckpt.index  cp-0018.ckpt.index  cp-0019.ckpt.index  cp-0020.ckpt.index  cp-0021.ckpt.index  cp-0022.ckpt.index  cp-0023.ckpt.index  cp-0024.ckpt.index  cp-0025.ckpt.index  cp-0026.ckpt.index  cp-0027.ckpt.index  cp-0028.ckpt.index  cp-0029.ckpt.index  cp-0030.ckpt.index  cp-0031.ckpt.index  cp-0032.ckpt.index  cp-0033.ckpt.index  cp-0034.ckpt.index  cp-0035.ckpt.index  cp-0036.ckpt.index  cp-0037.ckpt.index  cp-0038.ckpt.index  cp-0039.ckpt.index  (+8 more)
checkpoints/GMVAE_components=5_loss=ELBO+MMD_kl_warmup=10_mmd_warmup=10_20200617-125828/: checkpoint  cp-0001.ckpt.index  cp-0002.ckpt.index  cp-0003.ckpt.index  cp-0004.ckpt.index  cp-0005.ckpt.index  cp-0006.ckpt.index
checkpoints/GMVAE_components=5_loss=ELBO+MMD_kl_warmup=10_mmd_warmup=10_20200617-130846/: checkpoint  cp-0001.ckpt.index  cp-0002.ckpt.index  cp-0003.ckpt.index  cp-0004.ckpt.index  cp-0005.ckpt.index  cp-0006.ckpt.index  cp-0007.ckpt.index  cp-0008.ckpt.index  cp-0009.ckpt.index  cp-0010.ckpt.index  cp-0011.ckpt.index  cp-0012.ckpt.index  cp-0013.ckpt.index  cp-0014.ckpt.index  cp-0015.ckpt.index  cp-0016.ckpt.index  cp-0017.ckpt.index  cp-0018.ckpt.index  cp-0019.ckpt.index  cp-0020.ckpt.index  cp-0021.ckpt.index  cp-0022.ckpt.index  cp-0023.ckpt.index  cp-0024.ckpt.index  cp-0025.ckpt.index  cp-0026.ckpt.index  cp-0027.ckpt.index  cp-0028.ckpt.index  cp-0029.ckpt.index  cp-0030.ckpt.index  cp-0031.ckpt.index  cp-0032.ckpt.index  cp-0033.ckpt.index  cp-0034.ckpt.index  cp-0035.ckpt.index  cp-0036.ckpt.index  cp-0037.ckpt.index  cp-0038.ckpt.index  (+14 more)
deepof/: Pipfile  __init__.py  analyze.py  annotation_utils.py  arena_utils.py  config.py  data.py  data_loading.py  data_manager.py  database_explorer.py  deepof_train_embeddings.py  deepof_train_unsupervised.py  export_video.py  hypermodels.py  legacy_smote_handling.py  model_training.py  model_utils.py  models.py  pose_utils.py  post_hoc.py  preprocess.py  requirements.txt  sanitycheck.py  setup.py  supervised_utils.py  train_model.py  train_unsupervised_models.py  train_utils.py  unsupervised_utils.py  utils.py  visuals.py  visuals_utils.py
docs/: docs_requirements.txt
examples/: example_utils.py  hyperparameter_tuning.py  main.ipynb  model_training.py  predict_video.py  set_default_entropy_radius.ipynb  train_utils.py
logos/: deepOF_logo_w_text.afdesign  deepOF_logo_wo_text.afdesign
paper/: paper.bib  paper.md
source/: __init__.py  classes.py  hypermodels.py  hyperparameter_tuning.py  model_utils.py  models.py  preprocess.py  requirements.txt  setup.py  utils.py
supplementary_notebooks/: deepof_data_exploration.ipynb  deepof_explore_model_stability.ipynb  deepof_model_evaluation.ipynb  latent_space_sampling.ipynb  main.ipynb  recognise_elliptical_arena.ipynb  regognise_circular_arena.ipynb  regognise_elliptical_arena.ipynb  set_default_entropy_radius.ipynb
test_deepof/: test_utils.py
tests/: post_hoc.py  test_analyze.py  test_annotation_utils.py  test_build_hypermodels.py  test_build_models.py  test_data.py  test_data_loading.py  test_hypermodels.py  test_model_utils.py  test_pose_utils.py  test_post_hoc.py  test_preprocess.py  test_supervised_utils.py  test_train_utils.py  test_unsupervised_utils.py  test_utils.py  test_visuals.py  test_visuals_utils.py
visualizations/: train_viz_app.py  train_viz_data_generator.py
(+457 files in other folders)
