[tool.poetry]
name = "deepof"
version = "0.4.5"
description = ""
authors = ["lucas_miranda <lucas_miranda@psych.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.2"
ruptures = "^1.1.7"
tqdm = "^4.64.1"
pandas = "^1.5.0"
POT = "^0.8.2"
Shapely = "^1.8.4"
regex = "^2022.9.13"
opencv-python = "^4.6.0.66"
llvmlite = "^0.39.1"
shap = "^0.41.0"
networkx = "^2.8.7"
dask-image = "^2022.9.0"
seglearn = "^1.2.5"
keras-tuner = {version = "^1.0.3", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
tensorflow-macos = {version = "2.11.0", markers="platform_machine == 'arm64' and platform_system == 'Darwin'"}
tensorflow = {version = "2.11.0", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
keras-tcn-macos = {version = "^1.0", markers="platform_machine == 'arm64' and platform_system == 'Darwin'"}
keras-tcn = {version = "^3.5.0", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
tensorflow-probability = "0.19.0"
tifffile = "^2022.8.12"
ipykernel = "^6.16.0"
statsmodels = "^0.13.2"
umap-learn = "^0.5.3"
ipywidgets = "^8.0.2"
openpyxl = "^3.0.10"
kaleido = "0.2.1"
av = "^10.0.0"
imblearn = "^0.0"
lxml = "^4.9.1"
spektral = {git = "https://github.com/lucasmiranda42/spektral"}
imageio-ffmpeg = "^0.4.7"
statannotations = "^0.5.0"
joblib = "^1.2.0"
h5py = "^3.7.0"
tables = "^3.8.0"
catboost = "^1.1.1"
tornado = "6.1"
jupyter-client = "7.3.2"
pomegranate = {git = "https://git@github.com/jmschrei/pomegranate.git"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
hypothesis = "^6.56.1"
sphynx = "^0.0.3"
sphinx-press-theme = "^0.8.0"
coverage = "^6.5.0"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8.9"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
jupyter = "^1.0.0"
pydocstyle = "^6.1.1"
jupyter-sphinx = "^0.4.0"
deptry = "^0.8.0"
pipreqs = "^0.4.13"
build = "^0.10.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry==1.4.1"]
build-backend = "poetry.core.masonry.api"

