[tool.poetry]
name = "deepof"
version = "0.6.5"
description = ""
authors = ["lucas_miranda <lucas_miranda@psych.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "1.2.0"
scipy = "1.8.1"
numpy = "^1.22.0"
numba = "0.56.4"
ruptures = "1.1.8"
tqdm = "^4.64.1"
pandas = "^1.5.0"
POT = "^0.8.2"
Shapely = "^1.8.4"
regex = "^2022.9.13"
opencv-python = "^4.6.0.66"
llvmlite = "^0.39.1"
shap = "^0.41.0"
networkx = "^2.8.7"
dask-image = "2022.9.0"
seglearn = "^1.2.5"
keras-tuner = "^1.4.7"
tensorflow-macos = {version = "2.12.0", markers="platform_machine == 'arm64' or platform_system == 'Darwin'"}
tensorflow = {version = "2.12.0", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
keras-tcn-macos = {version = "^1.0", markers="platform_machine == 'arm64' and platform_system == 'Darwin'"}
keras-tcn = {version = "^3.5.0", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
tensorflow-probability = "0.20.1"
tifffile = "^2022.8.12"
ipykernel = "^6.16.0"
umap-learn = "^0.5.3"
ipywidgets = "^8.0.2"
openpyxl = "^3.0.10"
kaleido = "0.2.1"
av = "9.2.0"
imblearn = "^0.0"
lxml = "^4.9.1"
spektral = "1.3.1"
imageio-ffmpeg = "^0.4.7"
statannotations = "^0.5.0"
joblib = "^1.2.0"
h5py = "^3.7.0"
tables = {version = "3.8.0", markers="platform_machine != 'arm64' or platform_system != 'Darwin'"}
catboost = "^1.1.1"
tornado = "6.1"
jupyter-client = "7.3.2"
pomegranate = "1.0.4"
segment-anything = "^1.0"
sleap-io = "^0.0.9"
matplotlib = "3.7.2"
sktime = "^0.24.0"
moviepy = "^1.0.3"
torch = [
    {version="2.2.2", source="PyPI", markers="sys_platform != 'linux'"},
    {version="2.2.2", source="pytorch-cpu", markers="sys_platform == 'linux'"}
]
torchvision = [
    {version="^0.17.2", source="PyPI", markers="sys_platform != 'linux'"},
    {version="^0.17.2", source="pytorch-cpu", markers="sys_platform == 'linux'"}
]
keras = "2.12"
natsort = "8.4.0"
dask = "2024.5.1"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
hypothesis = "^6.56.1"
sphynx = "^0.0.3"
sphinx-press-theme = "^0.8.0"
coverage = "^6.5.0"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8.9"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
jupyter = "^1.0.0"
pydocstyle = "^6.1.1"
jupyter-sphinx = "^0.4.0"
deptry = "^0.8.0"
pipreqs = "^0.4.13"
build = "^0.10.0"
twine = "5.1.1"
jupyter-http-over-ws = "^0.0.8"
bumpver = "^2023.1129"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry==1.4.1"]
build-backend = "poetry.core.masonry.api"


[tool.bumpver]
current_version = "0.6.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"setup.py" = [
    'version="{version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]
"README.md" = [
    'release-v{version}-informational',
]
"docs/source/index.rst" = [
    'release-v{version}-informational',
]


