[tool.poetry]
name = "deepof"
version = "0.8.5"
description = ""
authors = ["lucas_miranda <lucas_miranda@psych.mpg.de>", "patrick_schlegel <patrick_schlegel@psych.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = ">=1.2.0"
scipy = ">=1.9.3"
numpy = "^1.25.2"
numba = "0.59.1"
tqdm = "^4.64.1"
pandas = "^1.5.0"
Shapely = "^1.8.4"
regex = "^2022.9.13"
opencv-python = "^4.6.0.66"
llvmlite = "^0.42.0"
shap = "^0.44.1"
networkx = "^2.8.7"
seglearn = "^1.2.5"
tifffile = "^2022.8.12"
umap-learn = "^0.5.3"
ipywidgets = "^8.0.2"
openpyxl = "^3.0.10"
av = "12.3.0"
lxml = "^4.9.1"
imageio-ffmpeg = "^0.4.7"
statannotations = "^0.5.0"
joblib = "^1.2.0"
h5py = "^3.7.0"
tables = {version = "3.8.0", markers="platform_machine != 'arm64' or (platform_system != 'darwin' and platform_system != 'Darwin')"}
catboost = "^1.1.1"
pomegranate = "1.0.4"
segment-anything = "^1.0"
sleap-io = "^0.0.9"
matplotlib = "3.7.2"
moviepy = "^1.0.3"
torch = [
    {version="2.8.0", source="PyPI", markers="sys_platform != 'linux'"},
    {version="2.8.0", source="pytorch-cpu", markers="sys_platform == 'linux'"}
]
torchvision = [
    {version="0.23.0", source="PyPI", markers="sys_platform != 'linux'"},
    {version="0.23.0", source="pytorch-cpu", markers="sys_platform == 'linux'"}
]
natsort = "8.4.0"
statsmodels = "^0.14.2"
twine = "5.1.1"
pyarrow = "^17.0.0"
pot = "^0.9.6"
xgboost = "2.1.4"
duckdb = "1.2.2"
psutil = ">=7.0.0"
tensorboard = "^2.20.0"
optuna = "^4.8.0"
deeptime = "^0.4.5"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
hypothesis = "^6.56.1"
sphynx = "^0.0.3"
sphinx-press-theme = "^0.8.0"
coverage = "^6.5.0"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8.9"
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^3.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.16.0"
tornado = "6.1"
jupyter-client = "7.3.2"
pydocstyle = "^6.1.1"
jupyter-sphinx = "^0.4.0"
deptry = "^0.8.0"
pipreqs = "^0.4.13"
build = "^0.10.0"
twine = "^5.1.1"
jupyter-http-over-ws = "^0.0.8"
bumpver = "^2023.1129"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry==1.4.1"]
build-backend = "poetry.core.masonry.api"


[tool.bumpver]
current_version = "0.8.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"deepof/data.py" = [
    'current_deepof_version="{version}"',
]
"setup.py" = [
    'version="{version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]
"README.md" = [
    'release-v{version}-informational',
]
"docs/source/index.rst" = [
    'release-v{version}-informational',
]


